Added custom class ImagePictureBox with Chris's suggestion to get image rectangle properties. Having difficulty adding to windows forms

--- a/BookBuilder/BookBuilder.csproj
+++ b/BookBuilder/BookBuilder.csproj
@@ -53,7 +53,10 @@
   <ItemGroup>
     <Compile Include="BB_Page.cs" />
     <Compile Include="BB_Book.cs" />
-    <Compile Include="CustomPictureBox.cs">
+    <Compile Include="ImagePictureBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="VideoPictureBox.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="GUI.cs">
